# semicircle

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  .stylelintrc.json  gen-proto-types.sh  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
datalayer/: .gitignore  design.txt  go.mod  go.sum  main.go  mig.sh  runnable.go  schema.txt  seed.sh  serve.sh  works.txt
datalayer/app/: database.go  routes.go  server.go
datalayer/app/commands/: root.go  seed.go
datalayer/app/common/: application.go  constants.go
datalayer/app/controllers/: ctrl_set.go  items.go  store_meta.go
datalayer/app/models/: all.go  base_model.go  customers.go  demo.go  item.go  offerings.go  quantify.go  sales.go  stocks.go  store.go  supplies.go
datalayer/protos/: defs.proto  offerings.proto
datalayer/protos.sm/: defs.pb.go  offerings.pb.go
datalayer/twirp.sm/: defs.pb.go  offerings.pb.go  offerings.twirp.go
native/: .gitignore  Cargo.toml
native/app_common/: Cargo.toml
native/app_common/src/: lib.rs
native/app_core/: Cargo.toml
native/app_core/src/: error.rs  lib.rs  prelude.rs
native/app_core/src/protos/: mod.rs  offerings.proto  play.proto
native/app_desktop/: Cargo.toml  tauri.conf.json
native/app_server/: Cargo.toml
native/compileproto/: Cargo.toml
native/compileproto/src/: main.rs
src/: App.tsx  fonts.css  index.css  main.tsx  utils.ts
src/faked/: faked.ts
src/repositories/: index.ts
src/terminal/: CartItemCard.css  CartItemCard.tsx  CartView.tsx  CheckoutTable.tsx  Financials.tsx  OfferingCard.css  OfferingCard.tsx  OfferingsPane.tsx  POSTerminal.tsx  common.ts  terminal-global.css
src/types/: index.ts  quantification.ts
(+9 files in other folders)
