[package]
name = "app_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
app_common = { path = "../app_common" }
prost = "0.11.8"
prost-types = "0.11.8"
tokio = { version = "1.27.0", features = ["macros"] }

## -- Serde/Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with_macros = "2"
# prost-simple-rpc = "0.3.0"
prost-twirp = { version = "0.2.0", features = ["service-gen"] }


# For dev and to easy first time build experience, just have memory surrealdb for  now.
# Remove `default-feature=false, features = ...` to enable persistent storage.
# surrealdb = { version = "1.0.0-beta.9+20230402", default-features=false, features = ['kv-mem', 'kv-rocksdb'] }

## -- Others
# parking_lot = "0.12"
# modql = "0.2.0"
# NOTE: , features = ["format"] would be nice, but it is very heavy, and sometime have compiles issues with swc_ components
# ts-rs = { version = "6" }


[build-dependencies]
# prost-build = "0.11.8"
dotenv = "0.15.0"
