[package]
name = "compileproto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.8"
prost-types = "0.11.8"
prost-build = "0.11.8"
# prost-simple-rpc = "0.3.0"
# prost-simple-rpc-build = "0.3.0"
# prost-twirp = { version = "0.2.0", features = ["service-gen"] }
quote = "1.0"
proc-macro2 = { version = "1.0.52", default-features = false }
